credit_service/kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    name: mongodb
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: mongodb
      name: mongodb

  selector:
    app: mongodb
