credit_service/kubernetes/rest-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-service
  annotations:
    nginx.ingress.kubernetes.io/enable-rewrite-log: "false"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: credit-service
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: credit-service #перенаправляем запрос на service
                port:
                  name: credit-service
#path=localhost/...
